<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HealthTag</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="onboard_title" tools:ignore="ExtraTranslation">Lorem Ipsum is simply dummy text</string>
    <string name="onboard_desc" tools:ignore="ExtraTranslation">Lorem Ipsum is simply dummy\ntext of the printing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="test_title">Lorem Ipsum is simply dummy text?</string>
    <string name="test_desc">Lorem Ipsum is simply dummy text of the\nprinting and typesetting industry.</string>
    <string name="test_detail_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s,\n
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s,</string>
    <string name="test_user">You are using application for?</string>
    <string name="self">Self</string>
    <string name="other">Other</string>
    <string name="lets_begin">Let’s Begin</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="phone_number">Phone Number*</string>
    <string name="phone_no">Phone Number</string>
    <string name="select_gender">Select Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="text_continue">Continue</string>
    <string name="visit_our_website">Visit our website</string>
    <string name="email_us">Email Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_underline"><u>Privacy Policy</u></string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="terms_condition_underline"><u>Terms &amp; Conditions</u></string>
    <string name="terms_and_condition">Terms &amp;\nConditions</string>
    <string name="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.\n\nIt has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="faqs">FAQs</string>
    <string name="recent_tickets">Recent Tickets</string>
    <string name="view_all">View All</string>
    <string name="frequently_asked">Frequently Asked Questions</string>
    <string name="device">Devices</string>
    <string name="report">Reports</string>
    <string name="contact_support">Contact Support</string>
    <string name="tickets">Tickets</string>
    <string name="others">Others</string>
    <string name="order">Orders</string>
    <string name="solved">Solved</string>
    <string name="open">Open</string>
    <string name="all">All</string>
    <string name="create_ticket">Create a Ticket</string>
    <string name="ticket_title">Ticket Title</string>
    <string name="select_topic">Select Topic</string>
    <string name="describe_issue">Describe your issue</string>
    <string name="submit">Submit</string>
    <string name="devices">Devices</string>
    <string name="login_into_the_app">Login into the app</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="dont_have_account_signup">Don’t have an account? Signup</string>
    <string name="login_with">Login with</string>
    <string name="create_new_account">Create a New Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agree_terms_condition"><![CDATA[By clicking submit you agree to the\nTerms & Conditions of the app]]></string>
    <string name="signup_with">Signup with</string>
    <string name="enter_code">Enter the code\nsent to your email</string>
    <string name="resend_code">Didn’t receive the code? Resend</string>
    <string name="reset_password">Reset\nyour password?</string>
    <string name="forgot_password">Forgot\nyour password?</string>
    <string name="privacy_policy_desc">OUR COMMITMENT TO YOU At APP, your privacy is a top priority. Your privacy is at the core of the way we design and build the services and products you know and love, so that you can fully trust them and focus on building meaningful connections. We appreciate that you put your trust in us when you provide us with your information and we do not take this lightly. We do not compromise with your privacy. We design all of our products and services with your privacy in mind. We involve experts from various fields, including legal, security, engineering, product design and others to make sure that no decision is taken without respect for your privacy. We strive to be transparent in the way we process your data. Because we use many of the same online services you do, we know that insufficient information and overly complicated language are common issues in privacy policies. We take the exact opposite approach: we have written our Privacy Policy and related documents in plain language. We actually want you to read our policies and understand our privacy practices! We work hard to keep your information secure We have teams dedicated to keeping your data safe and secure. We constantly update our security practices and invest in our security efforts to enhance the safety of your information. PRIVACY POLICY Welcome to APP Privacy Policy. Thank you for taking the time to read it. We appreciate that you trust us with your information and we intend to always keep that trust. This starts with making sure you understand the information we collect, why we collect it, how it is used and your choices regarding your information. This Policy describes our privacy practices in plain language, keeping legal and technical jargon to a minimum. This Privacy Policy applies beginning May 25, 2018. The previous version of this Privacy Policy, available here, will apply until then. EFFECTIVE DATE: May 25, 2018 1. WHO WE ARE 2. WHERE THIS PRIVACY POLICY APPLIES 3. INFORMATION WE COLLECT 4. COOKIES AND OTHER SIMILAR DATA COLLECTION TECHNOLOGIES 5. HOW WE USE INFORMATION 6. HOW WE SHARE INFORMATION 7. CROSS-BORDER DATA TRANSFERS 8. YOUR RIGHTS 9. RESIDENTS OF CALIFORNIA 10. HOW WE PROTECT YOUR INFORMATION</string>
    <string name="terms_condition_desc">Last revised on June 11, 2019 Welcome to APP, operated by Match Group, LLC (“us,” “we,” the “Company” or “APP”). Notice to California subscribers: You may cancel your subscription, without penalty or obligation, at any time prior to midnight of the third business day following the date you subscribed. If you subscribed using your Apple ID, refunds are handled by Apple, not Tinder. If you wish to request a refund, please visit https://getsupport.apple.com . If you subscribed using your Google Play Store account or through Tinder Online: Contact customer support 1. Acceptance of Terms of Use Agreement. By creating a Tinder account or by using any APP service, whether through a mobile device, mobile application or computer (collectively, the “Service”) you agree to be bound by (i) these Terms of Use, (ii) our Privacy Policy and Safety Tips , each of which is incorporated by reference into this Agreement, and (iii) any terms disclosed to you if you purchase or have purchased additional features, products or services we offer on the Service (collectively, this “Agreement”). If you do not accept and agree to be bound by all of the terms of this Agreement (other than the limited one-time opt out right for certain users provided for in Section 15), you should not use the Service. We may make changes to this Agreement and to the Service from time to time. We may do this for a variety of reasons including to reflect changes in or requirements of the law, new features, or changes in business practices. The most recent version of this Agreement will be posted on the Service under Settings and also on gotinder.com, and you should regularly check for the most recent version. The most recent version is the version that applies. If the changes include material changes that affect your rights or obligations, we will notify you in advance of the changes by reasonable means, which could include notification through the Service or via email. 2. Eligibility. You must be at least 18 years of age to create an account on App and use the Service. By creating an account and using the Service, you represent and warrant that: you can form a binding contract with App, you are not a person who is barred from using the Service under the laws of the United States or any other applicable jurisdiction–meaning that you do not appear on the U.S. Treasury Department’s list of Specially Designated Nationals or face any other similar prohibition, you will comply with this Agreement and all applicable local, state, national and international laws, rules and regulations, and you have never been convicted of or pled no contest to a felony, a sex crime, or any crime involving violence, and that you are not required to register as a sex offender with any state, federal or local sex offender registry. 3. Your Account. In order to use Tinder, you may sign in using your Facebook login. If you do so, you authorize us to access and use certain Facebook account information, including but not limited to your public Facebook profile and information about Facebook friends you share in common with other Tinder users. For more information regarding the information we collect from you and how we use it, please consult our Privacy Policy . You are responsible for maintaining the confidentiality of your login credentials you use to sign up for Tinder, and you are solely responsible for all activities that occur under those credentials. If you think someone has gained access to your account, please immediately contact us.</string>
    <string name="results">Results</string>
    <string name="langauge_preference">Language Preference</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zip Code</string>
    <string name="blogs">Blogs</string>
    <string name="related_blogs">Related Blogs</string>
    <string name="feedback">Feedback</string>
    <string name="not_at_all_happy">Not at all Happy</string>
    <string name="not_happy">Not Happy</string>
    <string name="happy">Happy</string>
    <string name="very_happy">Very Happy</string>
    <string name="love_this_app">Love this App</string>
    <string name="give_your_feedback">Give your feedback...</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="hello_welcome">Hello, Welcome</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="logs">Logs</string>
    <string name="reports">Reports</string>
    <string name="feedback_submitted">Feedback Submitted!</string>
    <string name="your_bag">Your Bag</string>
    <string name="clear_bag">Clear Bag</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="add_member">Add Member</string>
    <string name="edit_member">Edit Member</string>
    <string name="name">Name</string>
    <string name="address_line_optional">Address Line 2 (optional)</string>
    <string name="choose_relationship">Choose Relationship</string>
    <string name="save">Save</string>
</resources>