<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.SplashActivity"
            android:background="@color/white"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gray_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_member"
                android:textColor="@color/_444343"
                android:textSize="40sp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/outfit_regular"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_back"/>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="@color/hint_black"
                android:textSize="15sp"
                android:fontFamily="@font/outfit_regular"
                android:textColor="@color/black"
                android:background="@drawable/rounded_rect_bg_gray_border_25dp"
                android:layout_marginTop="40dp"
                android:padding="16dp"
                android:inputType="textCapWords"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"/>

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:textColorHint="@color/hint_black"
                android:textSize="15sp"
                android:fontFamily="@font/outfit_regular"
                android:textColor="@color/black"
                android:inputType="textCapWords"
                android:background="@drawable/rounded_rect_bg_gray_border_25dp"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name"/>
            <EditText
                android:id="@+id/et_address2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_line_optional"
                android:textColorHint="@color/hint_black"
                android:textSize="15sp"
                android:fontFamily="@font/outfit_regular"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:background="@drawable/rounded_rect_bg_gray_border_25dp"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_address"/>

            <EditText
                android:id="@+id/et_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:textColorHint="@color/hint_black"
                android:textSize="15sp"
                android:inputType="textCapWords"
                android:fontFamily="@font/outfit_regular"
                android:textColor="@color/black"
                android:background="@drawable/rounded_rect_bg_gray_border_25dp"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_address2"/>

            <EditText
                android:id="@+id/et_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                android:textColorHint="@color/hint_black"
                android:textSize="15sp"
                android:fontFamily="@font/outfit_regular"
                android:textColor="@color/black"
                android:background="@drawable/rounded_rect_bg_gray_border_25dp"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:inputType="textCapWords"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:drawablePadding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_city"/>

            <EditText
                android:id="@+id/et_zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zipcode"
                android:textColorHint="@color/hint_black"
                android:textSize="15sp"
                android:fontFamily="@font/outfit_regular"
                android:textColor="@color/black"
                android:inputType="number"
                android:background="@drawable/rounded_rect_bg_gray_border_25dp"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_state"/>

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_no"
                android:textColorHint="@color/hint_black"
                android:textSize="15sp"
                android:maxLength="12"
                android:inputType="phone"
                android:fontFamily="@font/outfit_regular"
                android:textColor="@color/black"
                android:background="@drawable/rounded_rect_bg_gray_border_25dp"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_zipcode"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:textColorHint="@color/hint_black"
                android:textSize="15sp"
                android:inputType="textWebEmailAddress"
                android:fontFamily="@font/outfit_regular"
                android:textColor="@color/black"
                android:background="@drawable/rounded_rect_bg_gray_border_25dp"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_phone"/>

            <TextView
                android:id="@+id/et_relationship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/choose_relationship"
                android:textColorHint="@color/hint_black"
                android:textSize="15sp"
                android:fontFamily="@font/outfit_regular"
                android:textColor="@color/black"
                android:background="@drawable/rounded_rect_bg_gray_border_25dp"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                app:drawableEndCompat="@drawable/ic_down_profile"
                android:drawablePadding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_email"/>

            <Spinner
                android:id="@+id/sp_relationship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_gender"
                android:visibility="invisible"
                android:clickable="false"
                android:textSize="14sp"
                android:padding="16dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/et_relationship"
                app:layout_constraintBottom_toBottomOf="@id/et_relationship"/>



            <TextView
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_rect_bg_red"
                android:gravity="center"
                android:padding="20dp"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="20dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/outfit_regular"
                app:layout_constraintTop_toBottomOf="@id/et_relationship"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>